--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>java-demo-spi</module>
+      <module>java-serializable</module>
   </modules>
 
   <name>java-world</name>
